refactor: remove repository slug from repository APIs
